<resources>
    <string name="app_name">ClientCountTest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_start_service">Start Service</string>
    <string name="btn_bind_service">Bind Service</string>
    <string name="btn_unbind_service">Unbind Service</string>
    <string name="btn_stop_service">Stop Service</string>
    <string name="btn_show_cur_num">Show Current Service</string>
</resources>