<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <Button
        android:id= "@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_service"
        android:onClick="onClick" />

    <Button
        android:id= "@+id/btn_bind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_bind_service"
        android:onClick="onClick"
        android:layout_below="@+id/btn_start"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id= "@+id/btn_unbind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_unbind_service"
        android:onClick="onClick"
        android:layout_below="@+id/btn_bind"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id= "@+id/btn_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_stop_service"
        android:onClick="onClick"
        android:layout_below="@+id/btn_unbind"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id= "@+id/btn_show_cur_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_show_cur_num"
        android:onClick="onClick"
        android:layout_below="@+id/btn_stop"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
